[gd_scene load_steps=29 format=3 uid="uid://brc2h44edbj5a"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_4jpfc"]
[ext_resource type="Script" path="res://Scripts/States/state_machine.gd" id="2_tc3yw"]
[ext_resource type="PackedScene" uid="uid://caqpeyq7g56bn" path="res://Scenes/damageable.tscn" id="2_tcc00"]
[ext_resource type="PackedScene" uid="uid://dqexibtsgatqp" path="res://Scenes/Weapons/rifle.tscn" id="3_ad34e"]
[ext_resource type="Script" path="res://Scripts/Weapons/weapon_manager.gd" id="3_dngkr"]
[ext_resource type="Script" path="res://Scripts/States/Player States/idle_player_state.gd" id="3_pne75"]
[ext_resource type="PackedScene" uid="uid://d2x6finf6hnf4" path="res://Scenes/Weapons/pistol.tscn" id="4_oi7c2"]
[ext_resource type="Script" path="res://Scripts/States/Player States/air_player_state.gd" id="4_qiulw"]
[ext_resource type="Script" path="res://Scripts/States/Player States/walk_player_state.gd" id="5_ho5hy"]
[ext_resource type="Script" path="res://Scripts/States/Player States/sprint_player_state.gd" id="6_1qnc2"]
[ext_resource type="PackedScene" uid="uid://cj7xkscmie81y" path="res://Scenes/Weapons/shotgun.tscn" id="6_tnj4j"]
[ext_resource type="Script" path="res://Scripts/States/Player States/crouch_player_state.gd" id="7_mjfqt"]
[ext_resource type="Script" path="res://Scripts/States/Player States/slide_player_state.gd" id="8_uemic"]
[ext_resource type="Theme" uid="uid://ctri33ojacyl0" path="res://UI/Themes/debug.tres" id="9_e1owm"]
[ext_resource type="Script" path="res://Scripts/UI/hud.gd" id="10_0lavf"]
[ext_resource type="Script" path="res://Scripts/UI/debug.gd" id="10_0shru"]
[ext_resource type="Script" path="res://Scripts/UI/reticle.gd" id="12_vy6x5"]
[ext_resource type="Script" path="res://Scripts/UI/ui_manager.gd" id="14_7y8rs"]
[ext_resource type="PackedScene" uid="uid://bu0mtrnvhonpt" path="res://Scenes/UI/settings_menu.tscn" id="18_wxgc6"]
[ext_resource type="Script" path="res://Scripts/Player/player_input.gd" id="20_hcigh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l214m"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ge1xk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fvek4"]
albedo_color = Color(0, 0.654902, 0.894118, 1)
roughness = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_3r45p"]

[sub_resource type="Animation" id="Animation_twumr"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.7, 0), Vector3(0, 0.2, 0)]
}

[sub_resource type="Animation" id="Animation_qw5pv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.7, 0)]
}

[sub_resource type="Animation" id="Animation_eqx5m"]
resource_name = "Slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.7, 0), Vector3(0, 0.2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_456lr"]
_data = {
"Crouch": SubResource("Animation_twumr"),
"RESET": SubResource("Animation_qw5pv"),
"Slide": SubResource("Animation_eqx5m")
}

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("head", "camera", "animation_player", "crouch_shape_cast")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_4jpfc")
head = NodePath("Head")
camera = NodePath("Head/Camera3D")
animation_player = NodePath("AnimationPlayer")
crouch_shape_cast = NodePath("CeilingCheck")

[node name="Input" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("20_hcigh")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_l214m")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ge1xk")
surface_material_override/0 = SubResource("StandardMaterial3D_fvek4")

[node name="CeilingCheck" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_3r45p")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 0.901961, 0, 1)

[node name="Damageable" parent="." instance=ExtResource("2_tcc00")]
collision_layer = 2

[node name="DamageableShape" type="CollisionShape3D" parent="Damageable"]
shape = SubResource("CapsuleShape3D_l214m")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 90.0

[node name="ReflectionProbe" type="ReflectionProbe" parent="Head/Camera3D"]
visible = false
update_mode = 1

[node name="WeaponManager" type="Node3D" parent="Head/Camera3D"]
unique_name_in_owner = true
script = ExtResource("3_dngkr")

[node name="Rifle" parent="Head/Camera3D/WeaponManager" instance=ExtResource("3_ad34e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.519, -0.344, -0.747766)

[node name="Pistol" parent="Head/Camera3D/WeaponManager" instance=ExtResource("4_oi7c2")]

[node name="Shotgun" parent="Head/Camera3D/WeaponManager" instance=ExtResource("6_tnj4j")]
bullet_count = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_456lr")
}

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("2_tc3yw")
initial_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_pne75")

[node name="AirPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_qiulw")

[node name="WalkPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_ho5hy")

[node name="SprintPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_1qnc2")

[node name="CrouchPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_mjfqt")

[node name="SlidePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_uemic")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("14_7y8rs")

[node name="HUD" type="Control" parent="UI" node_paths=PackedStringArray("health_label", "cur_ammo_label", "cur_wave_label", "enemies_left_label")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("10_0lavf")
health_label = NodePath("MarginContainer/Health")
cur_ammo_label = NodePath("MarginContainer/Ammo")
cur_wave_label = NodePath("MarginContainer/WaveVBox/CurrentWave")
enemies_left_label = NodePath("MarginContainer/WaveVBox/EnemiesRemaining")

[node name="Reticle" type="CenterContainer" parent="UI/HUD" node_paths=PackedStringArray("lines")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_vy6x5")
lines = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]

[node name="Top" type="Line2D" parent="UI/HUD/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UI/HUD/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UI/HUD/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UI/HUD/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Health" type="Label" parent="UI/HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 48
text = "Health: 100/100"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Ammo" type="Label" parent="UI/HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 48
text = "Ammo: 24/24"
horizontal_alignment = 2
vertical_alignment = 2

[node name="WaveVBox" type="VBoxContainer" parent="UI/HUD/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="CurrentWave" type="Label" parent="UI/HUD/MarginContainer/WaveVBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 48
text = "Wave 123"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemiesRemaining" type="Label" parent="UI/HUD/MarginContainer/WaveVBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "Enemies Remaining: 123"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugPanel" type="PanelContainer" parent="UI" node_paths=PackedStringArray("property_container")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("9_e1owm")
script = ExtResource("10_0shru")
property_container = NodePath("MarginContainer/VBoxContainer")

[node name="MarginContainer" type="MarginContainer" parent="UI/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="SettingsMenu" parent="UI" instance=ExtResource("18_wxgc6")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="update_health" from="." to="UI/HUD" method="on_update_health"]
[connection signal="update_ammo" from="Head/Camera3D/WeaponManager/Rifle" to="UI/HUD" method="on_update_ammo"]
[connection signal="update_ammo" from="Head/Camera3D/WeaponManager/Pistol" to="UI/HUD" method="on_update_ammo"]
[connection signal="update_ammo" from="Head/Camera3D/WeaponManager/Shotgun" to="UI/HUD" method="on_update_ammo"]
[connection signal="closed_settings_menu" from="UI/SettingsMenu" to="Input" method="on_closed_settings_menu"]
[connection signal="opened_settings_menu" from="UI/SettingsMenu" to="Input" method="on_opened_settings_menu"]
